--- a/app/components/RangeSlider/default.scss
+++ b/app/components/RangeSlider/default.scss
@@ -1,23 +1,3 @@
-*,
-*:before,
-*:after{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Helvetica, sans-serif;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  color: #333333;
-
-  overflow-x: hidden;
-}
-
 .superslider-wrapper
 {
     width: 100%;
@@ -66,6 +46,7 @@ theme templates
   position: relative;
 
   &.rangeslider-horizontal {
+      min-width: 60px;
   }
   &.rangeslider-vertical {
     height: 100%;
@@ -148,18 +129,18 @@ theme templates
         right: 3px;
         position: absolute;
         border-radius: 8px;
-        border: 1px solid #414042;
+        border: 1px solid #888;
         background: transparent;
         z-index: 1;
     }
+    background-color: #dadada;
   &.rangeslider-horizontal
   {
     margin: 5px 0;
 
     height: 18px;
     border-radius: 10px;
-    background-color: #bdbdbd;
-    box-shadow: inset 0 1px 2px 0 #757575, inset 0 -1px 2px #e0e0e0;
+    box-shadow: inset 0 1px 2px 1px #777777, inset 0 -1px 2px 1px #d0d0d0;
 
     .rangeslider__fill {
         background: linear-gradient(to top, #a4a8da 0%,#2648a2 100%);
@@ -188,10 +169,10 @@ theme templates
     margin: 0 4px;
     width: 18px;
     border-radius: 10px;
-    background-color: #bdbdbd;
+    box-shadow: inset 1px 0 2px 1px #777777, inset -1px 0 2px 1px #d0d0d0;
 
     .rangeslider__fill {
-        background: linear-gradient(to top, #a4a8da 0%,#2648a2 100%);
+        background: linear-gradient(to left, #a4a8da 0%,#2648a2 100%);
         border-radius: 10px;
 
         height: 100%;
@@ -226,8 +207,7 @@ theme templates
     border-radius: 4px;
 
     .rangeslider__fill {
-        // background: linear-gradient(to top, #3abfd5 0%,#ace8f1 100%);
-        background: linear-gradient(to bottom, #48def9 0%,#38b2c7 48%,#a4f2fe 50%,#38b2c7 52%,#38b2c7 100%);
+        box-shadow: inset 0 4px 0 0 #38def9, inset 0 -5px 0 0 #38b2c7, inset 0 -6px 0 0 #a4f2fe;
         border-radius: 4px;
         height: 100%;
     }
@@ -253,7 +233,7 @@ theme templates
 
 
     .rangeslider__fill {
-        background: linear-gradient(to right, #48def9 0%,#38b2c7 48%,#a4f2fe 50%,#38b2c7 52%,#38b2c7 100%);
+        box-shadow: inset 4px 0 0 0 #38def9, inset -5px 0 0 0 #38b2c7, inset -6px 0 0 0 #a4f2fe;
         border-radius: 4px;
         width: 100%;
         bottom: 0;
@@ -304,14 +284,14 @@ theme templates
   &.rangeslider-vertical {
     margin: 0 4px;
     width: 10px;
-    box-shadow: inset -1px 1px 1px 1px #5d5d5d;
+    box-shadow: inset 1px -1px 1px 1px #5d5d5d;
 
 
     .rangeslider__fill {
-        box-shadow: inset -1px 1px 1px 1px #4aa049;
+        box-shadow: inset 1px -1px 1px 1px #4aa049;
         background-color: #87c886;
         border-radius: 4px;
-        
+
         width: 100%;
         bottom: 0;
     }
