--- a/app/components/CircularProgress/circularProgress.css
+++ b/app/components/CircularProgress/circularProgress.css
@@ -9,18 +9,18 @@
 }
 
 .CircularProgress-Bg {
-    stroke: var(--progress-bg-color);
+    /*stroke: var(--progress-bg-color);*/
 }
 
 .CircularProgress-Fg {
     transition: stroke-dasharray .5s ease-in-out;
-    stroke: var(--progress-fg-color);
+    /*stroke: var(--progress-fg-color);*/
 }
 
 .CircularProgress-Text {
     font-family: sans-serif;
     font-size: 30px;
-    fill: var(--progress-fg-color);
+    /*fill: var(--progress-fg-color);*/
 
     transform: translate(0 50%);
 }
